--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="HardcodedText">
 
 
-    <FrameLayout
-        android:layout_width="100dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#0f0" />
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
-    <com.brainbear.corner.RoundCornerFrameLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="#f00"
-        app:round_corner_radius="20dp"
-        app:round_corner_top_right_radius="0dp"
-        app:round_corner_bottom_right_radius="50dp"
-        />
 
-</FrameLayout>
+        <com.brainbear.corner.RoundCornerFrameLayout
+            android:id="@+id/rcLayout1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="#f00"
+
+
+            />
+
+        <com.brainbear.corner.RoundCornerFrameLayout
+            android:id="@+id/rcLayout2"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:background="#f00"
+
+
+            />
+
+        <com.brainbear.corner.RoundCornerFrameLayout
+            android:id="@+id/rcLayout3"
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="#f00"
+
+
+            />
+
+    </LinearLayout>
+
+
+    <CheckBox
+        android:id="@+id/cbHalfSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Half Size" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Radius" />
+
+        <SeekBar
+            android:id="@+id/radius"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="51" />
+
+        <TextView
+            android:id="@+id/textRadius"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Top Left" />
+
+        <SeekBar
+            android:id="@+id/radiusTopLeft"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="51" />
+
+        <TextView
+            android:id="@+id/textTopLeft"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Top Right" />
+
+        <SeekBar
+            android:id="@+id/radiusTopRight"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="51" />
+
+        <TextView
+            android:id="@+id/textTopRight"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Bottom Right" />
+
+        <SeekBar
+            android:id="@+id/radiusBottomRight"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="51" />
+
+        <TextView
+            android:id="@+id/textBottomRight"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Bottom Left" />
+
+        <SeekBar
+            android:id="@+id/radiusBottomLeft"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="51" />
+
+        <TextView
+            android:id="@+id/textBottomLeft"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Stroke Width" />
+
+        <SeekBar
+            android:id="@+id/stokeWidth"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="50" />
+
+        <TextView
+            android:id="@+id/textStrokeWidth"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</LinearLayout>
