--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -230,9 +230,9 @@
             android:layout_height="40dp" />
 
         <TextView
-            android:layout_marginLeft="5dp"
             android:id="@+id/textStrokeColor"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 </LinearLayout>
