--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,13 @@
         android:orientation="horizontal">
 
 
-        <com.brainbear.corner.RoundCornerFrameLayout
+        <com.brainbear.corner.RoundCornerButton
+            android:src="@mipmap/ic_launcher"
             android:id="@+id/rcLayout1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginHorizontal="10dp"
             android:background="#f00"
-
-
             />
 
         <com.brainbear.corner.RoundCornerFrameLayout
@@ -32,8 +31,6 @@
             android:layout_height="100dp"
             android:layout_weight="1"
             android:background="#f00"
-
-
             />
 
         <com.brainbear.corner.RoundCornerFrameLayout
@@ -42,8 +39,6 @@
             android:layout_height="100dp"
             android:layout_marginHorizontal="10dp"
             android:background="#f00"
-
-
             />
 
     </LinearLayout>
