--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:id="@+id/rcLayout1"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            app:round_corner_radius="10dp"
             android:layout_marginHorizontal="10dp"
             android:background="#f00"
             />
